[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wya"
authors = [{name = "gottaeat", email = "mss@tutanota.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

dependencies = [
    "dnspython >= 2.6.1",
    "flask >= 3.0.3",
    "maxminddb >= 2.6.2",
    "waitress >= 3.0.0",
    "paste >= 3.10.1",
]

[project.urls]
Source = "http://github.com/gottaeat/wya"

[project.scripts]
wya = "wya.app:run"
